--- a/src/scss/dirty/_hacks.scss
+++ b/src/scss/dirty/_hacks.scss
@@ -23,3 +23,13 @@
     min-width: 100%;
     min-height: 100%;
 }
+
+#start {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 40px;
+    margin-left: -50px;
+    margin-top: -20px;
+}
