--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,3 +1,56 @@
 body {
     background-color: $black;
+    color: $white;
+    font-family: 'NHaasGDs', Helvetica, Arial, sans-serif;
+}
+
+main {
+    // position: fixed;
+}
+
+header {
+    width: 90vw;
+    text-align: center;
+
+    padding: 0;
+    // margin-top: 60px;
+    margin: 60px auto;
+
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#header2 {
+    width: 100%;
+    text-align: center;
+
+    padding: 0 60px;
+    margin-top: 60px;
+
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    text-align: center;
+
+    padding: 0 60px;
+    margin-bottom: 60px;
+
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
 }
