--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,11 +2,23 @@
  * Fonts
 */
 
-// @font-face {
-//   font-family: 'DINP-R';
-//   src: url("../fonts/DINPro-Regular.eot?") format("eot"),
-//   url("../fonts/DINPro-Regular.woff") format("woff"),
-//   url("../fonts/DINPro-Regular.ttf") format("truetype"),
-//   url("../fonts/DINPro-Regular.svg#DINPro-Regular") format("svg");
-//   font-style: normal;
-// }
+@font-face {
+    font-family: 'NHaasGDs';
+    src: url('../fonts/NHaasGroteskDSPro-75Bd.woff2') format('woff2'),
+        url('../fonts/NHaasGroteskDSPro-75Bd.woff') format('woff'),
+        url('../fonts/NHaasGroteskDSPro-75Bd.ttf') format('truetype'),
+        url('../fonts/NHaasGroteskDSPro-75Bd.svg#NHaasGroteskDSPro-75Bd') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Rcklss';
+    src: url('../fonts/RecklessNeue-Medium.woff2') format('woff2'),
+        url('../fonts/RecklessNeue-Medium.woff') format('woff'),
+        url('../fonts/RecklessNeue-Medium.ttf') format('truetype'),
+        url('../fonts/RecklessNeue-Medium.svg#RecklessNeue-Medium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
