--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,27 +5,12 @@ body {
 }
 
 main {
-    // position: fixed;
+    
 }
 
 header {
-    width: 90vw;
-    text-align: center;
-
-    padding: 0;
-    // margin-top: 60px;
-    margin: 60px auto;
-
-    display: flex;
-
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-#header2 {
     width: 100%;
-    text-align: center;
+    // text-align: center;
 
     padding: 0 60px;
     margin-top: 60px;
@@ -34,7 +19,7 @@ header {
 
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
 }
 
 footer {
@@ -52,5 +37,9 @@ footer {
 
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+}
+
+a {
+    color: inherit;
 }
