--- a/src/scss/dirty/_hacks.scss
+++ b/src/scss/dirty/_hacks.scss
@@ -11,6 +11,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    pointer-events: none;
 }
 
 #yt-wrap iframe{
@@ -22,4 +23,25 @@
     margin: auto;
     min-width: 100%;
     min-height: 100%;
+    pointer-events: none;
 }
+
+.u-preloader {
+    align-items: center;
+    background: rgb(0, 0, 0);
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transition: opacity 200ms linear;
+    width: 100%;
+    z-index: 9999999;
+    opacity: 1;
+  }
+  
+  .u-preloader--loaded {
+    opacity: 0;
+    pointer-events: none;
+  }
